--- a/package.json
+++ b/package.json
@@ -40,6 +40,15 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^3.1.0"
+    "chai": "^4.2.0",
+    "chai-enzyme": "^1.0.0-beta.0",
+    "chai-jest-diff": "^1.0.2",
+    "dirty-chai": "^2.0.1",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.5",
+    "gh-pages": "^3.1.0",
+    "install": "^0.13.0",
+    "npm": "^6.14.8",
+    "react-test-renderer": "^17.0.1"
   }
 }
